fix(table): avoid layout shift

--- a/src/app/components/table/table.component.sass
+++ b/src/app/components/table/table.component.sass
@@ -69,5 +69,6 @@ table
             border-bottom: 1px solid $gray-200
         td
             padding: $padding-3 0px
+            width: 200px
             ::ng-deep svg
                 fill: $gray-400
